# mnist

./: CMakeLists.txt  Matrix.h  Network.cpp  Network.h  NetworkActivator.h  NetworkRunner.h  NetworkTraits.h  NetworkTypes.h  Templates.h  TypeList.h  Vector.cpp  Vector.h  main.cpp
Math/: Matrix.h
Network/: Network.h  NetworkTypes.h
